# elp-stereo-camera-app

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: windows-release.yml
docs/: WINDOWS_RELEASE.md
elp_console/: __init__.py  calibration.py  calibration_tab.py  camera.py  camera_settings.py  capture_ffmpeg.py  capture_opencv.py  cards.py  control_bar.py  depth_preview.py  devices.py  frames.py  library.py  media_controller.py  paths.py  profile_dialog.py  profiles.py  recorder.py  rectify_preview.py  segmented.py  side_panel.py  stereo_depth.py  styles.py  widgets.py  window.py
tests/: test_calibration.py  test_calibration_subtabs.py  test_capture_opencv.py  test_control_panels.py  test_frames.py  test_launcher.py  test_paths.py  test_profiles.py  test_recorder.py  test_stereo_depth.py  test_version.py
tools/: build_windows.ps1  check_version.py  diag_av.py  diag_av_sweep.py  probe_camera.py  screenshot_ui.py  selftest_live.py  smoke_stream.py
