[project]
name = "elp-stereo-camera-app"
version = "1.0.0"
description = "Full console for ELP side-by-side USB stereo cameras: live viewer, recording, lens/model profiles, and stereo calibration"
requires-python = ">=3.10"
dependencies = [
    "av>=17.1.0",
    "opencv-python>=4.9.0",
    "pygrabber>=0.2",
    "pyside6>=6.11.1",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pyinstaller>=6.0",
    "pytest>=9.1.1",
]
